# FINSAGE_MCP

./: .env.example  .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: deploy.yml
templates/: chart-view.html
website/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
website/.github/workflows/: deploy.yml
website/app/: globals.css  layout.tsx  page.tsx
website/components/: HeroChart.tsx
website/components/ui/: safari.tsx
website/lib/: i18n.tsx  images.ts
